--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert-react": "^0.4.11",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
