--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "string-math": "^1.2.2",
     "styled-components": "^5.3.3",
     "sweetalert-react": "^0.4.11",
     "web-vitals": "^2.1.2"
